# uploader-rs

./: Cargo.toml  README.md  config.toml
src/: main.rs  structs.rs  utils.rs
src/client/: client.rs  mod.rs  structs.rs
src/hosts/: enums.rs  errors.rs  mod.rs  sizes.rs  utils.rs
src/hosts/fileio/: fileio.rs  mod.rs  structs.rs
src/hosts/gofile/: gofile.rs  mod.rs  structs.rs
src/hosts/pixeldrain/: mod.rs  pixeldrain.rs  structs.rs
