[package]
name = "uploader-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.209", features = ["derive"] }
clap = { version = "4.5.4", features = ["derive"] }
url = "2.5.2"
reqwest = {  version = "0.12.7", features = ["blocking", "multipart", "json"] }
mime_guess = "2.0.5"
indicatif = "0.17.8"
serde_json = "1.0.128"
toml = "0.8.19"
regex = "1.10.6"

[profile.release]
strip = true